--- a/第3节 webpack工作流/lesson3/package.json
+++ b/第3节 webpack工作流/lesson3/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,11 @@
   "devDependencies": {
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "@babel/generator": "^7.19.5",
+    "@babel/parser": "^7.19.4",
+    "@babel/traverse": "^7.19.4",
+    "babel-types": "^6.26.0"
   }
 }
