--- a/第1节 webpack实战/lesson4-mode相关设置/package.json
+++ b/第1节 webpack实战/lesson4-mode相关设置/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV1=xxx webpack"
+    "build": "cross-env NODE_ENV=666 webpack --env=xxx"
   },
   "keywords": [],
   "author": "",
