--- a/第1节 webpack实战/lesson17-externals配置/package.json
+++ b/第1节 webpack实战/lesson17-externals配置/package.json
@@ -35,7 +35,9 @@
     "file-loader": "^6.2.0",
     "filemanager-webpack-plugin": "^7.0.0",
     "html-loader": "^4.2.0",
+    "html-webpack-externals-plugin": "^2.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "html-webpack-tags-plugin": "^3.0.2",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "node-sass": "^7.0.3",
