--- a/第1节 webpack实战/lesson8-file-loader&url-loader的使用/package.json
+++ b/第1节 webpack实战/lesson8-file-loader&url-loader的使用/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
