--- a/第3节 webpack工作流/lesson3-webpack编译原理/.vscode/launch.json
+++ b/第3节 webpack工作流/lesson3-webpack编译原理/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/webpack.config.js"
+            "program": "${workspaceFolder}/debugger.js"
         }
     ]
 }
